SONARIAC-1558 Heredoc parser shouldn't crash on empty heredoc (#128)