@@ -19,7 +19,6 @@
  */
 package org.sonar.iac.docker.tree.impl;
 
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.sonar.iac.common.api.tree.HasTextRange;
 import org.sonar.iac.common.api.tree.impl.TextRange;
@@ -34,7 +33,6 @@ import org.sonar.iac.docker.tree.api.RunInstruction;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.sonar.iac.common.testing.IacCommonAssertions.assertThat;
-import static org.sonar.iac.common.testing.IacTestUtils.code;
 import static org.sonar.iac.docker.TestUtils.assertArgumentsValue;
 
 class HereDocumentImplTest {
@@ -45,12 +43,13 @@ class HereDocumentImplTest {
       .matches(" <<KEY\n \nKEY")
       .matches(" <<\"KEY\"\n \nKEY")
       .matches(" <<-KEY\n \nKEY")
+      .matches(" <<-KEY\nKEY")
       .matches(" <<KEY\nline 1\nKEY")
       .matches(" <<KEY vals\nline 1\nKEY")
       .matches(" <<KEY1 <<KEY2\nKEY1\nKEY2")
       .matches(" <<KEY1 <<KEY2\nline 1\nKEY1\nline 2\nKEY2")
+      .matches(" <<KEY\nKEY")
 
-      .notMatches(" <<KEY\nKEY")
       .notMatches(" <KEY\nline1\nKEY")
       .notMatches("<<KEY\nline1\nKEY")
       .notMatches(" <<KEY\nline1\nKEY value")
@@ -71,11 +70,12 @@ class HereDocumentImplTest {
 
   @Test
   void shouldParseHeredocWithProperTextRange() {
-    String code = code("FROM scratch",
-      "",
-      "RUN <<-INPUT",
-      "  apt-get install wget",
-      "INPUT");
+    String code = """
+      FROM scratch
+
+      RUN <<-INPUT
+        apt-get install wget
+      INPUT""";
     File file = DockerTestUtils.parse(code, DockerLexicalGrammar.FILE);
 
     assertThat(file.getKind()).isEqualTo(DockerTree.Kind.FILE);
@@ -88,7 +88,28 @@ class HereDocumentImplTest {
     assertArgumentsValue(runInstruction.arguments(), "<<-INPUT", "apt-get", "install", "wget", "INPUT");
     assertThat(runInstruction.arguments().get(0).textRange()).hasRange(3, 4, 3, 12);
 
-    TextRange fullTextRange = TextRanges.merge(runInstruction.arguments().stream().map(HasTextRange::textRange).collect(Collectors.toList()));
+    TextRange fullTextRange = TextRanges.merge(runInstruction.arguments().stream().map(HasTextRange::textRange).toList());
     assertThat(fullTextRange).hasRange(3, 4, 5, 5);
+  }
+
+  @Test
+  void shouldParseEmptyHeredoc() {
+    String code = """
+      FROM scratch
+      RUN <<EOT
+      EOT""";
+    File file = DockerTestUtils.parse(code, DockerLexicalGrammar.FILE);
+
+    assertThat(file.getKind()).isEqualTo(DockerTree.Kind.FILE);
+    assertThat(file.body().dockerImages()).hasSize(1);
+
+    DockerImage dockerImage = file.body().dockerImages().get(0);
+    assertThat(dockerImage.instructions()).hasSize(1);
+
+    RunInstruction runInstruction = (RunInstruction) dockerImage.instructions().get(0);
+    assertArgumentsValue(runInstruction.arguments(), "<<EOT", "EOT");
+
+    TextRange fullTextRange = TextRanges.merge(runInstruction.arguments().stream().map(HasTextRange::textRange).toList());
+    assertThat(fullTextRange).hasRange(2, 4, 3, 3);
   }
 }
